objects/LIMS_Project_ID__c.object
<CustomObject>
    <fields>
        <fullName>LIMS_Project_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>External ID from LIMS. Duplicate values not allowed.</inlineHelpText>
        <label>Project ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number_of_Samples__c</fullName>
        <inlineHelpText>Number of Samples Received under this Project ID. Rollup field (updated automatically, cannot be edited)</inlineHelpText>
        <label>Number of Samples Received-Project ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SOW_ID__c</fullName>
        <formula>SOW__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field</inlineHelpText>
        <label>SOW ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOW_Name__c</fullName>
        <formula>SOW__r.SOW_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the SOW value that is applied to all new samples with this project ID. It can only be changed to another SOW in the &apos;SOWs&apos; related list.</inlineHelpText>
        <label>Current SOW Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOW__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Link to the Current SOW.</inlineHelpText>
        <label>Current SOW</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$Source.Sponsor_Account__c</field>
                <operation>equals</operation>
                <valueField>SOW__c.Sponsor_Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Sponsor_Account__c</field>
                <operation>equals</operation>
                <valueField>SOW__c.Sponsor_Account__r.ParentId</valueField>
            </filterItems>
            <infoMessage>Here is lookup window text</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SOW__c</referenceTo>
        <relationshipLabel>Project IDs</relationshipLabel>
        <relationshipName>LIMS_Project_ID</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sponsor_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sponsor Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project IDs</relationshipLabel>
        <relationshipName>LIMS_Project_IDs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Project ID</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sponsor_Account__c</columns>
        <columns>LIMS_Project_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Number_of_Samples__c</columns>
        <columns>SOW__c</columns>
        <columns>SOW_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Biopharma_LIMS_Project_ID</fullName>
        <columns>NAME</columns>
        <columns>Sponsor_Account__c</columns>
        <columns>SOW__c</columns>
        <columns>Number_of_Samples__c</columns>
        <columns>LIMS_Project_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sponsor_Account__c</field>
            <operation>notEqual</operation>
            <value>Guardant Health</value>
        </filters>
        <label>Biopharma Biz Dev</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>ProjectID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project IDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>